[package]
name = "rngstr"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/ManiGhazaee/rngstr"
authors = ["ManiGhazaee <hosseinghazaee1@gmail.com>"]
description = "A cli tool for generating random strings of characters with customization options and a small domain specific language"
readme = "README.md"
license = "MIT"
keywords = ["cli", "random", "rng", "string", "dsl"]

[dependencies]
rand = "0.8.5"
cli-clipboard = "0.4.0"
clap = { version = "4.5.4", features = ["derive"] }
regex = "1.10.4"
lazy_static = "1.4"
rayon = "1.10.0"